client: update driver earnings, ride history, and passenger main screen